--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -54,7 +54,7 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 
 <p><big><strong>Ottobre 2024</strong>: Passeggiata storico-artistica nel borgo di Vignola.</p></big>
 
-<p><big>Nell’ambito della manifestazione <i>Autunno a Vignola</i> e in collaborazione con <i>La Banda della Trottola APS</i>, gli <i>Amici dell’Arte APS</i> e la <i>Pro Loco Vignola</i>.</p></big><br>
+<p><big>Nell’ambito della manifestazione <i>Autunno a Vignola</i> e in collaborazione con <i>La Banda della Trottola APS</i>, gli <i>Amici dell’Arte Vignola APS</i> e la <i>Pro Loco Vignola</i>.</p></big><br>
 
 <p><big><strong>Settembre 2024</strong>: Passeggiata storico-artistica dalla Casa Residenza per Anziani (CRA) di Vignola al Santuario della Beata Vergine della Pieve, con visita all’interno di quest’antico edificio sacro vignolese.</p></big>
 
@@ -67,20 +67,20 @@ All’interno dei due numeri, sono contenute anche le altrettante parti di cui s
 
 <p><big><strong>Marzo 2024</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantatreesima edizione della <i>Festa dei Ciliegi in Fiore</i>.<br><br>
 
-All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato alla Sezione Vignolese dell’<i>AVIS Comunale di Vignola ODV</i>, nel 70° anniversario della sua costituzione.</big></p><br>
+All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’<i>AVIS Comunale di Vignola ODV</i>, nel settantesimo anniversario della sua costituzione.</big></p><br>
 
 <p><big><strong>Ottobre 2023</strong>: Passeggiate storico-artistiche nel borgo di Vignola e nel cimitero di Vignola Capoluogo.</p></big>
 
-<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i>, il Comune di Vignola e del Gruppo di Documentazione Vignolese <i>Mezaluna</i> - <i>Mario Menabue</i>.</p></big><br>
+<p><big>In collaborazione con gli <i>Amici dell’Arte Vignola APS</i>, il Comune di Vignola e del Gruppo di Documentazione Vignolese <i>Mezaluna</i> - <i>Mario Menabue</i>.</p></big><br>
 
 <p><big><strong>Settembre 2023</strong>: Collaborazione alla rivista mensile «Il Senso della Repubblica nel XXI secolo. Quaderni di Storia e Filosofia».<br><br>
 
-All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giacomo Barozzi, nonché alle Celebrazioni Barozziane, alla vigilia nel 450° anniversario della morte del famoso personaggio.</big></p><br>
+All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giacomo Barozzi, nonché alle Celebrazioni Barozziane, alla vigilia nel quattrocentocinquantesimo anniversario della morte del famoso personaggio.</big></p><br>
 
 
 <p><big><strong>Maggio 2023</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.</p></big>
 
-<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</big></p><br>
+<p><big>In collaborazione con gli <i>Amici dell’Arte Vignola APS</i> e il Comune di Vignola.</big></p><br>
 
 
 <p><big><strong>Dicembre 2021</strong>: Collaborazione alla rivista annuale «Montesquieu.it».<br><br>
@@ -90,11 +90,11 @@ All’interno del numero, è contenuto anche l’articolo che Piero Venturelli h
 
 <p><big><strong>Periodicamente</strong>: accompagnamento dei visitatori alla Casa Natale di Lodovico Antonio Muratori.<br><br>
 
-In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br>
+In collaborazione con gli <i>Amici dell’Arte Vignola APS</i> e il Comune di Vignola.</p></big><br>
 
 <p><big><strong>Occasionalmente</strong>: accompagnamento di visitatori di riguardo alla scoperta della storia di Vignola e delle bellezze del territorio.<br><br>
 
-In collaborazione con gli <i>Amici dell’Arte APS</i>.</p></big><br><br><br>	
+In collaborazione con gli <i>Amici dell’Arte Vignola APS</i>.</p></big><br><br><br>	
 
 
 <p><strong><big><big>FOTOGRAFIE</big></big></strong></p><br>
