--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -52,6 +52,10 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 
 <p><strong><big><big>Le nostre collaborazioni e attività sul territorio (dalla più recente)</big></big></strong></p><br>
 
+<p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della Festa dei Ciliegi in Fiore.</big></p>
+
+<p><big>All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’intitolazione della rotonda della Pieve e all’installazione in loco del monumento ai donatori.</big></p><br>
+
 <p><big><strong>Ottobre 2024</strong>: Passeggiata storico-artistica nel borgo di Vignola.</p></big>
 
 <p><big>Nell’ambito della manifestazione <i>Autunno a Vignola</i> e in collaborazione con <i>La Banda della Trottola APS</i>, gli <i>Amici dell’Arte Vignola APS</i> e la <i>Pro Loco Vignola</i>.</p></big><br>
