--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -52,7 +52,7 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 
 <p><strong><big><big>Le nostre collaborazioni e attività sul territorio (dalla più recente)</big></big></strong></p><br>
 
-<p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della Festa dei Ciliegi in Fiore.</big></p>
+<p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della <i>Festa dei Ciliegi in Fiore</i>.</big></p>
 
 <p><big>All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’intitolazione della rotonda della Pieve e all’installazione in loco del monumento ai donatori.</big></p><br>
 
