--- a/Pellegrini.html
+++ b/Pellegrini.html
@@ -94,6 +94,8 @@ Vengono qui riportate anche alcune parti già contenute nel libro <i>Scandiano e
 <img src="img/celebri vignolesi/Pellegrini Mario/biglietto2.jpg" width="450" height="300"><br><br><br>
 <p><center><big><big>La locandina dell’evento in ricordo di Pellegrini organizzato<br> nella Sala Consiliare del Comune di Vignola il 5 novembre 2022.</big></big></center></p>
 <img src="img/celebri vignolesi/Pellegrini Mario/locandina.jpg" width="440" height="650"><br><br><br>
+<p><center><big><big>Targa in ricordo di Pellegrini posizionata nell’autunno 2024 nei pressi della “Fossa Galvana”,<br> dunque a breve distanza dall’area dove fino agli anni Ottanta del secolo scorso si trovava la “Casa Cavani”,<br> abitazione ove il nostro personaggio venne al mondo.</big></big></center></p>
+<img src="img/celebri vignolesi/Pellegrini Mario/targa.jpg" width="390" height="670"><br><br><br>	
 	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
