--- a/Pippo.html
+++ b/Pippo.html
@@ -68,8 +68,8 @@ Nella prima intervista, il maestro vignolese si sofferma sulla sua ricerca artis
 Questo contributo fu girato a Vignola nel 1990 dalla rivista foggiana «Arte e Carte» (<strong><a href="http://www.arteecarte.it/cat/articolo_video.php?nn=147">http://www.arteecarte.it/cat/articolo_video.php?nn=147</a></strong>, ultimo accesso 11 febbraio 2025). Interventi per migliorare la qualità dell’audio sono stati eseguiti nel gennaio e febbraio 2025 da Sara Scaglioni, alla quale si deve anche l’intitolazione del filmato.<br>
 <strong><a href="Intervista.html">La ricerca artistica di Domenico Simonini fino al 1990</a></strong><br><br>
 Nella seconda intervista, il nostro personaggio affronta diversi temi, spaziando dalle memorie familiari alla sua formazione artistica, dal suo rapporto con Vignola e i Vignolesi al ruolo dell’artista nella società, dai suoi incontri a Milano alla nascita del sodalizio <i>Città e Campagna</i> tra pittori e scultori che hanno una concezione etica dell’arte, dal suo impegno per far conoscere gli altri artisti anche nell’ambito del <i>Salotto di L.A. Muratori</i> di Vignola alle sue prospettive per il futuro ecc.<br> 
-Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini da Sara Scaglioni, che si è occupata anche della postproduzione, ed è un’esclusiva di <i>Celebri Vignolesi</i>.
-<p><strong><a href="Intervista.html">Domenico Simonini. Un indipendente del nostro tempo</a></strong></p><br><br><br>
+Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini da Sara Scaglioni, che si è occupata anche della postproduzione, ed è un’esclusiva di <i>Celebri Vignolesi</i>.<br>
+<strong><a href="Intervista.html">Domenico Simonini. Un indipendente del nostro tempo</a></strong></p><br><br><br>
 
 
 <h5><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></h5><br><br>
