--- a/Pippo.html
+++ b/Pippo.html
@@ -155,7 +155,7 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 <p><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, 2022. Collezione privata.</center><br>
 <img src="img/celebri vignolesi/Pippo/quadrofinito.jpg" width="540" height="650"></p><br>
 <p><center>Simonini in compagnia degli amici Giovanni Romani (alla sua destra) e Raffaele Montanari (alla sua sinistra).<br> Questa fotografia è stata scattata il 16 luglio 2023.</center></p>
-<img src="img/celebri vignolesi/Pippo/romani.jpg" width="430" height="590"></p>
+<img src="img/celebri vignolesi/Pippo/romani.jpg" width="430" height="590"></p><br>
 <p><center>Simonini còlto in un momento di riposo nella sua abitazione. Scatto del 15 aprile 2025.</center></p>
 <img src="img/celebri vignolesi/Pippo/pippoariposo.jpg" width="430" height="670"></p><br><br><br>
 
