--- a/Pippo.html
+++ b/Pippo.html
@@ -62,6 +62,44 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 
 <p><big><strong><a href="https://domenicosimonini.com/">Domenico Simonini</a></strong> (ultimo accesso, 16 ottobre 2022): sito dell’Artista.</big></p><br><br><br>
 
+
+<h5><big><big><big><big><strong><center>RICONOSCIMENTI OTTENUTI<br>NEL CAMPO DELLA GRAFICA<br>
+(ACQUEFORTI)</center></strong></big></big></big></big></big></h5><br><br>
+
+<p><big><big><strong>PREMI IN ITALIA</strong></big></big></p><br>
+
+<p><big><strong>1982</strong> – 1° premio alla Biennale Grafica Originale “Luigi Servolini” di Livorno.<br>
+<strong>1983</strong> – 1° premio al Premio Internazionale “Bice Bugatti e Giovanni Segantini” di Nova Milanese (MB).<br>
+<strong>1983</strong> – 1° premio al Premio Nazionale “Città di Legnago” (VR).<br>
+<strong>1983</strong> – 1° premio Concorso Nazionale “Comune di Santa Maria a Vico” (CE).<br>
+<strong>1983</strong> – 1° premio all’Accademia d’Arte e Cultura “Pietro Aldi - Paride Pascucci” di Manciano (GR).<br>
+<strong>1984</strong> – 1° premio al Premio “Sulmona” (AQ).<br>
+<strong>1984</strong> – 1° premio al Premio Internazionale “Modica” (RG).<br>
+<strong>1984</strong> – 1° premio alla Biennale d’Arte “Città della Spezia”.<br>
+<strong>1985</strong> – 1° premio al Premio “Città di Gussago” (BS).<br>
+<strong>1987</strong> – 1° premio al Premio “Città di Casale Monferrato” (AL).<br>
+<strong>1987</strong> – 1° premio al Concorso Nazionale “Castelmaggiore” (BO).<br>
+<strong>1987</strong> – 1° premio al Premio Nazionale “Campobello” di Mazara del Vallo (TP).<br>
+<strong>1988</strong> – 1° premio al Premio “Sulmona” (AQ).<br></big></p><br><br>
+
+<p><big><big><strong>DIPLOMA IN ITALIA</strong></big></big></p><br>
+<p><big><strong>1983</strong> – Diploma Accademico Effettivo, Accademia delle Arti dell’Incisione di Livorno, patron Marc Chagall, presidente <i>ad honorem ad memoriam</i> Carlo Carrà.</big></p><br><br>
+
+<p><big><big><strong>MENZIONI ALL’ESTERO</strong></big></big></p><br>
+<p><big><strong>1984</strong> – Menzione speciale per la grafica al XIV Concorso “Primavera” di Berlino Est.<br>
+<strong>1985</strong> – Menzione speciale per la grafica al XXXIII Concorso “Disegno e Grafica Contemporanea Italiani” di Tokyo.</big></p><br><br>
+
+<p><big><big><strong>SEGNALAZIONI</strong></big></big></p><br>
+
+<p><big><strong>1983</strong>, <strong>1984</strong> e <strong>1985</strong> – Segnalazione e presenza nel <i>Catalogo della Grafica Italiana</i> (Bolaffi; Milano, Giorgio Mondadori & Associati [Torino, Ages Arti Grafiche]).</big></p><br><br>
+
+
+<p><big><big><strong>ALTRO</strong></big></big></p><br>
+
+<p><big><strong>1986</strong> – Partecipazione alla Mostra “Un panorama di tendenze” di Roma (Castel Sant’Angelo). La <i>Confcommercio</i>, nel 40° anniversario della sua fondazione, acquistò in quel contesto due acqueforti di Simonini in 100 esemplari cadauna.<br>
+<strong>1987</strong> – Invito alla partecipazione e all’acquisto per l’Italia all’VIII Mostra Internazionale Triennale “Intergrafik 87” di Berlino Est.<br>
+<strong>1990</strong> – Invito alla partecipazione e all’acquisto per l’Italia alla IX Mostra Internazionale Triennale “Intergrafik 90” di Berlino.</big></p><br><br>
+
 <h5><big><big><big><big><strong><center>FILMATI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Si pubblicano qui due interviste filmate a Simonini. Entrambe durano all’incirca 20 minuti.<br><br>
 Nella prima intervista, il maestro vignolese si sofferma sulla sua ricerca artistica nell’arco dei primi quattro lustri di carriera, prendendo in esame non solo i caratteri della sua pittura realista, ma anche il realismo figurativo nella grande arte del passato, alcune linee di sviluppo dell’arte contemporanea e il concetto di libertà dell’artista.<br>
