--- a/Pippo.html
+++ b/Pippo.html
@@ -123,21 +123,35 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 
 
 <p><big><center>Simonini, <i>Vignola, Corso Italia</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte di una collezione privata.</center></big></p>
-<img src="img/celebri vignolesi/Pippo/corsoitalia.jpg" width="480" height="680"></p><br>
-<p><big><center>Simonini, <i>Vignola, figure maschili e figure femminili</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione della Diocesi di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000264555/Simonini+D.+ultimo+quarto+sec.+XX%2C+Figure+maschili+e+femminili#popup-open">Beni Web della Chiesa Cattolica</a>, dove tuttavia il titolo risulta <i>Figure maschili e figure femminili</i><br> e non è indicato con precisione l’anno a cui risale la tavola (ultima consultazione, 2 maggio 2025).</center></big></p>
+<img src="img/celebri vignolesi/Pippo/corsoitalia.jpg" width="450" height="650"></p><br>
+
+<p><big><center>Simonini, <i>Vignola, figure maschili e femminili</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione della Diocesi di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000264555/Simonini+D.+ultimo+quarto+sec.+XX%2C+Figure+maschili+e+femminili#popup-open">Beni Web della Chiesa Cattolica</a>, dove tuttavia il titolo risulta <i>Figure maschili e femminili</i><br> e non è indicato con precisione l’anno a cui risale la tavola (ultima consultazione, 2 maggio 2025).</center></big></p>
 <img src="img/celebri vignolesi/Pippo/figure.jpg" width="600" height="600"></p><br>
 <p><big><center>Simonini, <i>Vignola, interno di bar</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione della Diocesi di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000264556/Simonini+D.+ultimo+quarto+sec.+XX%2C+Interno+di+bar">Beni Web della Chiesa Cattolica</a>, dove tuttavia il titolo risulta <i>Interno di bar</i><br> e non è indicato con precisione l’anno a cui risale la tavola (ultima consultazione, 2 maggio 2025).</p>
 <img src="img/celebri vignolesi/Pippo/internobar.jpg" width="600" height="600"></p><br>
 <p><center>Simonini, <i>Vignola, portici</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
-<img src="img/celebri vignolesi/Pippo/portici.jpeg" width="630" height="630"></p><br>
+<img src="img/celebri vignolesi/Pippo/portici.jpeg" width="600" height="600"></p><br>
 <p><center>Simonini, <i>Vignola sotto la pioggia</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
 <img src="img/celebri vignolesi/Pippo/pioggia.jpeg" width="630" height="630"></p><br>
 <p><center>Simonini, <i>Vignola, Via Soli</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
-<img src="img/celebri vignolesi/Pippo/viasoli.jpeg" width="460" height="670"></p><br>
-
-
+<img src="img/celebri vignolesi/Pippo/viasoli.jpeg" width="430" height="640"></p><br>
+<p><center>Simonini, <i>Deposizione di Gesù Cristo dalla Croce</i> (1978), olio su tela.<br> Quest’opera è custodita presso il Museo Diocesano Tridentino di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000264556/Simonini+D.+ultimo+quarto+sec.+XX%2C+Interno+di+bar ">Beni Web della Chiesa Cattolica</a> (ultima consultazione, 2 maggio 2025).</center><br>
+<img src="img/celebri vignolesi/Pippo/deposizione.jpg" width="530" height="450"></p><br>
+<p><center>Simonini, <i>Roma, Campidoglio</i> (1982), acquaforte;<br> è una delle due diverse incisioni recanti il medesimo titolo a essere state realizzate dal Maestro.<br> Quest’esemplare dell’opera fa parte della sua collezione.</center><br>
+<img src="img/celebri vignolesi/Pippo/campi.jpeg" width="470" height="630"></p><br>
+<p><center>Simonini, <i>Roma, Campidoglio</i> (1982), acquaforte;<br> è una delle due diverse incisioni recanti il medesimo titolo a essere state realizzate dal Maestro.<br> Quest’esemplare dell’opera fa parte della sua collezione.</center><br>
+<img src="img/celebri vignolesi/Pippo/doglio.jpeg" width="470" height="630"></p><br>
+<p><center>Simonini, <i>Roma, EUR</i> (1982), acquaforte.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
+<img src="img/celebri vignolesi/Pippo/eur.jpeg" width="470" height="630"></p><br>
+<p><center>Simonini, <i>Roma, Gianicolo</i> (1982), acquaforte.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
+<img src="img/celebri vignolesi/Pippo/gianicolo.jpeg" width="470" height="630"></p><br>
 <p><center>Simonini, <i>Roma, Stazione Termini</i> (1982), acquaforte.<br> L’esemplare riportato è custodito a Bagnacavallo (RA), Museo Civico delle Cappuccine, Gabinetto delle Stampe.<br> Fonte dell’immagine: <a href="https://www.repertoriobagnacavallo.it/incisori/loadcard.do?id_card=226234">Repertorio Bagnacavallo</a>, dove tuttavia l’opera risulta priva di titolo<br> e come anno di esecuzione si indica il 1980 (ultima consultazione, 2 maggio 2025).</center><br>
 <img src="img/celebri vignolesi/Pippo/bagnacavallo.jpg" width="460" height="600"></p><br>
+<p><center>Simonini, <i>Roma, Trastevere</i> (1982), acquaforte.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
+<img src="img/celebri vignolesi/Pippo/trastevere.jpeg" width="470" height="630"></p><br>
+<p><center>Simonini, <i>Roma, Via Giulia</i> (1982), acquaforte.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
+<img src="img/celebri vignolesi/Pippo/viagiulia.jpeg" width="470" height="630"></p><br>
+
 
 <p><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>,<br> da poco eseguito (oggi in collezione privata). Fonte: Archivio fotografico dell’Artista.</center><br>
 <img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
@@ -195,7 +209,7 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 <p><center>Simonini in compagnia degli amici Giovanni Romani (alla sua destra) e Raffaele Montanari (alla sua sinistra).<br> Questa fotografia è stata scattata il 16 luglio 2023.</center></p>
 <img src="img/celebri vignolesi/Pippo/romani.jpg" width="430" height="590"></p><br>
 <p><center>Simonini còlto in un momento di riposo nella sua abitazione. Scatto del 15 aprile 2025.</center></p>
-<img src="img/celebri vignolesi/Pippo/pippoariposo.jpg" width="430" height="670"></p><br><br><br>
+<img src="img/celebri vignolesi/Pippo/pippoariposo.jpg" width="400" height="640"></p><br><br><br>
 
 
 
