--- a/Pippo.html
+++ b/Pippo.html
@@ -123,7 +123,7 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 
 
 <p><big><center>Simonini, <i>Vignola, Corso Italia</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte di una collezione privata.</center></big></p>
-<img src="img/celebri vignolesi/Pippo/corsoitalia.jpg" width="450" height="650"></p><br>
+<img src="img/celebri vignolesi/Pippo/corsoitalia.jpg" width="410" height="610"></p><br>
 
 <p><big><center>Simonini, <i>Vignola, figure maschili e femminili</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione della Diocesi di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000264555/Simonini+D.+ultimo+quarto+sec.+XX%2C+Figure+maschili+e+femminili#popup-open">Beni Web della Chiesa Cattolica</a>, dove tuttavia il titolo risulta <i>Figure maschili e femminili</i><br> e non è indicato con precisione l’anno a cui risale la tavola (ultima consultazione, 2 maggio 2025).</center></big></p>
 <img src="img/celebri vignolesi/Pippo/figure.jpg" width="600" height="600"></p><br>
@@ -135,14 +135,14 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 <img src="img/celebri vignolesi/Pippo/pioggia.jpeg" width="630" height="630"></p><br>
 <p><center>Simonini, <i>Vignola, Via Soli</i> (1975), acquaforte a puntasecca.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
 <img src="img/celebri vignolesi/Pippo/viasoli.jpeg" width="430" height="640"></p><br>
-<p><center>Simonini, <i>Deposizione di Gesù Cristo dalla Croce</i> (1978), olio su tela.<br> Quest’opera è custodita presso il Museo Diocesano Tridentino di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000264556/Simonini+D.+ultimo+quarto+sec.+XX%2C+Interno+di+bar ">Beni Web della Chiesa Cattolica</a> (ultima consultazione, 2 maggio 2025).</center><br>
+<p><center>Simonini, <i>Deposizione di Gesù Cristo dalla Croce</i> (1978), olio su tela.<br> Quest’opera è custodita presso il Museo Diocesano Tridentino di Trento.<br> Fonte dell’immagine: <a href="https://www.beweb.chiesacattolica.it/benistorici/bene/1000121456/Simonini+D.+%281978%29%2C+Deposizione+di+Ges%C3%B9+Cristo+dalla+croce">Beni Web della Chiesa Cattolica</a> (ultima consultazione, 2 maggio 2025).</center><br>
 <img src="img/celebri vignolesi/Pippo/deposizione.jpg" width="530" height="450"></p><br>
 <p><center>Simonini, <i>Roma, Campidoglio</i> (1982), acquaforte;<br> è una delle due diverse incisioni recanti il medesimo titolo a essere state realizzate dal Maestro.<br> Quest’esemplare dell’opera fa parte della sua collezione.</center><br>
 <img src="img/celebri vignolesi/Pippo/campi.jpeg" width="470" height="630"></p><br>
 <p><center>Simonini, <i>Roma, Campidoglio</i> (1982), acquaforte;<br> è una delle due diverse incisioni recanti il medesimo titolo a essere state realizzate dal Maestro.<br> Quest’esemplare dell’opera fa parte della sua collezione.</center><br>
 <img src="img/celebri vignolesi/Pippo/doglio.jpeg" width="470" height="630"></p><br>
 <p><center>Simonini, <i>Roma, EUR</i> (1982), acquaforte.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
-<img src="img/celebri vignolesi/Pippo/eur.jpeg" width="470" height="630"></p><br>
+<img src="img/celebri vignolesi/Pippo/eur.jpeg" width="430" height="600"></p><br>
 <p><center>Simonini, <i>Roma, Gianicolo</i> (1982), acquaforte.<br> Quest’esemplare dell’opera fa parte della collezione del Maestro.</center><br>
 <img src="img/celebri vignolesi/Pippo/gianicolo.jpeg" width="470" height="630"></p><br>
 <p><center>Simonini, <i>Roma, Stazione Termini</i> (1982), acquaforte.<br> L’esemplare riportato è custodito a Bagnacavallo (RA), Museo Civico delle Cappuccine, Gabinetto delle Stampe.<br> Fonte dell’immagine: <a href="https://www.repertoriobagnacavallo.it/incisori/loadcard.do?id_card=226234">Repertorio Bagnacavallo</a>, dove tuttavia l’opera risulta priva di titolo<br> e come anno di esecuzione si indica il 1980 (ultima consultazione, 2 maggio 2025).</center><br>
