--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="it">
 <head>
+  <meta name="google-site-verification" content="D4-ch_8738Ik6Ad-Llq9WwYMnsTSFSSo-7ybVgfuWKQ" />
   <meta charset="utf-8">
   <script src="https://kit.fontawesome.com/a18eee3ca0.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
