--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -52,9 +52,23 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 
 <p><strong><big><big>Le nostre collaborazioni e attività sul territorio (dalla più recente)</big></big></strong></p><br>
 
-<p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della <i>Festa dei Ciliegi in Fiore</i>.</big></p>
+<p><big><strong>Giugno 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br><br>
 
-<p><big>All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’intitolazione della rotonda della Pieve e all’installazione in loco del monumento ai donatori.</big></p><br>
+Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br>
+
+
+<p><big><strong>Maggio 2025</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.<br><br>
+
+In collaborazione con La Banda della Trottola APS e gli Amici dell’Arte Vignola APS.</big></p><br>
+
+
+<p><big><strong>Aprile 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br><br>
+
+Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br>
+
+ <p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della <i>Festa dei Ciliegi in Fiore</i>.</big></p>
+ 
+ <p><big>All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’intitolazione della rotonda della Pieve e all’installazione in loco del monumento ai donatori.</big></p><br>
 
 <p><big><strong>Ottobre 2024</strong>: Passeggiata storico-artistica nel borgo di Vignola.</p></big>
 
@@ -100,6 +114,8 @@ In collaborazione con gli <i>Amici dell’Arte Vignola APS</i> e il Comune di Vi
 
 In collaborazione con gli <i>Amici dell’Arte Vignola APS</i>.</p></big><br><br><br>	
 
+<center><img src="img/FOTO VARIE/cragiugno.jpg" width="730" height="550"></center>
+<p><big><big><center>In visita presso la CRA di Vignola.</center></big></big></p><br><br>
 
 <p><strong><big><big>FOTOGRAFIE</big></big></strong></p><br>
 
