--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -52,17 +52,17 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 
 <p><strong><big><big>Le nostre collaborazioni e attività sul territorio (dalla più recente)</big></big></strong></p><br>
 
-<p><big><strong>Giugno 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br><br>
+<p><big><strong>Giugno 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br>
 
 Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br>
 
 
-<p><big><strong>Maggio 2025</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.<br><br>
+<p><big><strong>Maggio 2025</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.<br>
 
 In collaborazione con La Banda della Trottola APS e gli Amici dell’Arte Vignola APS.</big></p><br>
 
 
-<p><big><strong>Aprile 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br><br>
+<p><big><strong>Aprile 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br>
 
 Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br>
 
