--- a/Belloi1.html
+++ b/Belloi1.html
@@ -50,7 +50,7 @@ Oggigiorno Vignola ricorda quest’illustre figura con una strada in Castelvecch
 <p><center><big><big>Fotografia recente della facciata della casa natale di Domenico Belloi (e anche del padre Pietro Ercole).<br> L’edificio si trova lungo l’attuale Via Garibaldi, e per la precisione di fronte alla chiesa dei Santi Nazario e Celso.</big></center><br>
 <img src="img/celebri vignolesi/Belloi/casanatale.jpg" width="810" height="600"></p><br>
 <p><big><center>Lapide apposta sulla facciata della casa natale.</center></big></p>
-<img src="img/celebri vignolesi/Belloi/lapide.JPG" width="680" height="650"><br><br><br>
+<img src="img/celebri vignolesi/Belloi/image.png" width="680" height="650"><br><br><br>
 <p><big><center>Frontespizio della prima edizione (postuma) di <i>De Vineolae moderniori statu chronica enarratio</i>,<br> l’opera più importante e celebre di Belloi, che la redasse dal 1704 al 1706.<br> Questo volume, curato da <strong>Alessandro Plessi</strong>, uscì per i tipi bolognesi di Nicola Zanichelli nel 1872.</big></center></p>
 <img src="img/celebri vignolesi/Belloi/Vineolae Chronica.jpg" width="400" height="650"><br><br>
 <p><big><center>Prima di copertina di <i>Del più moderno stato di Vignola cronaca del Dott. Chierico Domenico Belloj</i>,<br> volgarizzazione e note di Bernardo Soli, Modena, Tipografia G. Ferraguti & C., Modena, 1935. <br> L’esemplare qui fotografato appartiene a una collezione privata.</big></center></p>
