--- a/Belloi2.html
+++ b/Belloi2.html
@@ -37,7 +37,7 @@
 <p><big><big><center>Fotografia recente della facciata della casa natale di Pietro Ercole Belloi (e anche del figlio Domenico).<br> Questo edificio è situato nell’odierna Via Garibaldi, di fronte alla chiesa dei Santi Nazario e Celso.</center></big></big></p>
 <img src="img/celebri vignolesi/Belloi/casanatale.jpg" width="810" height="600"><br><br><br>
 <p><big><big><center>Lapide apposta sulla facciata della casa natale.</center></big></big></p>
-<img src="img/celebri vignolesi/Belloi/lapide.JPG" width="680" height="650"><br><br><br>
+<img src="img/celebri vignolesi/Belloi/image.png" width="680" height="650"><br><br><br>
 <p><big><big><center>Frontespizio di una delle più note pubblicazioni di Belloi, <i>Exuuium Leonis</i> [...],<br> raccolta poetica in latino uscita a Ferrara, da Giulio Bulzoni Giglio, nel 1673. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Belloi/1673.jpeg" width="450" height="700"><br><br><br>
 <p><big><big><center>Frontespizio di un’altra conosciuta raccolta poetica in latino di Belloi:<br> <i>Adoreolæ Belloianæ pro Catholicis Heroibus in Propvgnatione Avstriacæ Viennæ</i> […],<br> opera data alle stampe a Bologna, presso la Chalcographia Montiana, nel 1684. Fonte: google.com<center></big></big></p>
