--- a/Belloi2.html
+++ b/Belloi2.html
@@ -40,7 +40,7 @@
 <img src="img/celebri vignolesi/Belloi/image.png" width="680" height="650"><br><br><br>
 <p><big><big><center>Frontespizio di una delle più note pubblicazioni di Belloi, <i>Exuuium Leonis</i> [...],<br> raccolta poetica in latino uscita a Ferrara, da Giulio Bulzoni Giglio, nel 1673. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Belloi/1673.jpeg" width="450" height="700"><br><br><br>
-<p><big><big><center>Frontespizio di un’altra conosciuta raccolta poetica in latino di Belloi:<br> <i>Adoreolæ Belloianæ pro Catholicis Heroibus in Propvgnatione Avstriacæ Viennæ</i> […],<br> opera data alle stampe a Bologna, presso la Chalcographia Montiana, nel 1684. Fonte: google.com<center></big></big></p>
+<p><big><big><center>Frontespizio di un’altra conosciuta raccolta poetica in latino di Belloi:<br> <i>Adoreolæ pro Catholicis Heroibus in Propugnatione Austriacæ Viennæ</i> […],<br> opera data alle stampe a Bologna, presso la Chalcographia Montiana, nel 1684. Fonte: google.com<center></big></big></p>
 <img src="img/celebri vignolesi/Belloi/1684.jpeg" width="450" height="700"><br><br><br>	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
