--- a/Tassoni.html
+++ b/Tassoni.html
@@ -45,6 +45,9 @@ Fonte delle tre fotografie: google.com</p>
 <img src="img/celebri vignolesi/Tassoni/tassoni3.jpg" width="440" height="600"><br><br>
 <img src="img/celebri vignolesi/Tassoni/tassoni2.jpg" width="440" height="600"><br><br>
 
+<p><big><big><center>Fotografia recente di una porzione del cortile interno dell’Archiginnasio,<br> sede dell’Università di Bologna dal 1563 al 1803. Fonte: google.com</center></big></big></p>
+<center><img src="img/celebri vignolesi/Tassoni/archiginnasio.png" width="950" height="580"></center></p><br>
+
 <p><big><big><center>Fotografia recente della facciata della chiesa di Sant’Agostino, a Modena. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Tassoni/chiesa.jpg"></center></p><br>
 
