--- a/Selmi.html
+++ b/Selmi.html
@@ -237,6 +237,10 @@ Ad avviso dell’insigne Vignolese, infine, Dante condensava in sé le migliori 
 <p>Monumento in ricordo di Selmi (1882), Palazzo del Rettorato dell’Università di Bologna. Il busto e la lapide furono eseguiti da Giuseppe Pacchioni (1819-1887), mentre l’epigrafe venne dettata da Luigi Calori (1807-1896).
 Per commemorare Selmi, che morì come presidente in carica della Società farmaceutica delle Romagne (con sede a Bologna), essa nel 1881 decise di sciogliersi, di erogare il fondo sociale a quel fine e di promuovere la nascita di un Comitato per le onoranze dell’illustre defunto. In tutto ciò va ricercata l’origine di questo monumento.</p>
 		<center><img src="img/celebri vignolesi/Selmi/ultima.JPG" width="400" height="710"></center><br><br>
+
+<p>Immagine che riproduce una porzione della fotografia scattata il 28 aprile 2009 durante la cerimonia pubblica del conferimento della cittadinanza onoraria della Città di Vignola ai membri della famiglia Borsari-Bartoli, la quale nel 1996 aveva deciso di donare al Comune di Vignola l’archivio dell’avo Francesco Selmi. Al centro, Giovanni Bartoli (ultimo discendente dell’insigne personaggio); alla sua destra, il padre Silvano e la zia di Giovanni Bartoli, Emma Foresti Borsari; alla sinistra del maestro Bartoli, l’allora sindaco di Vignola Roberto Adani e la moglie di Bartoli, Liliana Roglia. Fonte: blog <a href="http://www.giovannibartoli.com/">Giovanni Bartoli</a> (ultima consultazione 22 aprile 2025).</p>
+<center><img src="img/celebri vignolesi/Selmi/cittadinanza onoraria.jpg" width="700" height="600"></center><br><br>
+	
 			<p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024, 2025 - CELEBRI VIGNOLESI<br>
