--- a/novembre.html
+++ b/novembre.html
@@ -69,7 +69,7 @@ Cantelli studiò a Bologna e poi elesse a propria dimora quella città, anche se
 
 A meno di quarant’anni, il nostro personaggio era già celebre a livello internazionale per le sue carte geografiche, molte delle quali vennero pubblicate a Roma, nella raccolta di carte dal titolo <i>Mercurio Geografico</i>, a partire dal 1679.<br>  
 
-Dal 1686 alla morte, Cantelli abitò a Modena, dove fu geografo della regnante famiglia estense e (almeno dal 1689) bibliotecario della «Ducal Libraria».<br>  
+Dal 1686 alla morte, Cantelli abitò a Modena, dove fu geografo della regnante famiglia estense e (dal 1689) bibliotecario della «Ducal Libraria».<br>  
 
 Il nostro personaggio intrattenne buoni rapporti non solo con illustri letterati e scienziati che vivevano nelle principali città italiane e a Parigi, ma anche con quattro significativi uomini di cultura vignolesi, cioè <strong>Pietro Ercole Belloi</strong> (1634-1702) e il figlio <strong>Domenico</strong> (1660-1712), e i giovani <strong>Pietro Antonio Bernardoni</strong> (1672-1714) e <strong>Lodovico Antonio Muratori</strong> (1672-1750).</p><p>Nell’immagine qui sotto, frontespizio della raccolta <i>Mercurio Geografico</i> […], In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo]. In essa vennero pubblicate molte carte geografiche di Cantelli.</p><br><br>
 <img src="img/celebri vignolesi/Cantelli/Mercurio geografico.jpg" width="400" height="600"><br><br>
