--- a/Pippo.html
+++ b/Pippo.html
@@ -209,8 +209,11 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 <p><center>Simonini in compagnia degli amici Giovanni Romani (alla sua destra) e Raffaele Montanari (alla sua sinistra).<br> Questa fotografia è stata scattata il 16 luglio 2023.</center></p>
 <img src="img/celebri vignolesi/Pippo/romani.jpg" width="430" height="590"></p><br>
 <p><center>Simonini còlto in un momento di riposo nella sua abitazione. Scatto del 15 aprile 2025.</center></p>
-<img src="img/celebri vignolesi/Pippo/pippoariposo.jpg" width="400" height="640"></p><br><br><br>
-
+<img src="img/celebri vignolesi/Pippo/pippoariposo.jpg" width="400" height="640"></p><br>
+<p><center>Simonini accanto al suo olio su tela Carnevale di Venezia 2025, opera eseguita nella primavera di quell’anno.<br>
+ Questa fotografia è stata scattata nello studio dell’artista vignolese il 22 luglio 2025,<br>
+pochi giorni prima che il dipinto andasse ad arricchire una collezione privata.</center></p>
+<img src="img/celebri vignolesi/Pippo/image (1).jpg" width="840" height="540"></p><br><br><br>
 
 
 
