--- a/Neri1.html
+++ b/Neri1.html
@@ -50,7 +50,7 @@ Numerose fotografie e cartoline tratte da questa raccolta sono state riprodotte 
 
 Neri morì a Vignola il 30 agosto 2009, lasciando i figli Raffaele, Lavinia, Letizia e Cosimo, e i nipoti Luciano, Gabriele e Luca. Fu sepolto presso il locale cimitero, nella cappella funeraria di famiglia, dove già da molti anni riposava la moglie Gabriella Torreggiani (1930-1984), che aveva sposato il 15 settembre 1958.<br>  
 
-A Neri, nella sua città di adozione, risulta attualmente intitolata una Farmacia Comunale.</big></p><br><br><br>
+A Neri, nella sua cittadina di adozione, è stata intitolata nel 2010 la Farmacia Comunale che era stata aperta nel 2002. Nel 2025 l’esercizio è stato ceduto a privati dall’ente proprietario <i>Vignola Patrimonio s.r.l.</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Neri, sindaco di Vignola, in Consiglio Comunale (fotografia dell’inizio degli anni Cinquanta).<br> Fonte: collezione di Attilio Neri, ora Fondo fotografico Attilio Neri di proprietà del Comune di Vignola.</center></big></big></p>
@@ -79,3 +79,4 @@ Editor: Sara Scaglioni
  </footer>
 </body>
 </html>
+
