--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -52,23 +52,24 @@ Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione cos
 
 <p><strong><big><big>Le nostre collaborazioni e attività sul territorio (dalla più recente)</big></big></strong></p><br>
 
-<p><big><strong>Giugno 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br>
+<p><big><strong>Giugno 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.
 
-Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br>
+Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br><br>
 
 
 <p><big><strong>Maggio 2025</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.<br>
 
-In collaborazione con La Banda della Trottola APS e gli Amici dell’Arte Vignola APS.</big></p><br>
+In collaborazione con <i>La Banda della Trottola APS</i> e gli <i>Amici dell’Arte Vignola APS</i>.</big></p><br><br>
 
 
 <p><big><strong>Aprile 2025</strong>: Incontro presso la Casa Residenza per Anziani (CRA) di Vignola.<br>
 
-Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br>
+Intervento dedicato a concittadini illustri del passato e ad alcuni importanti luoghi storici di Vignola.</big></p><br><br>
 
- <p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della <i>Festa dei Ciliegi in Fiore</i>.</big></p>
- 
- <p><big>All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’intitolazione della rotonda della Pieve e all’installazione in loco del monumento ai donatori.</big></p><br>
+
+<p><big><strong>Marzo 2025</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantaquattresima edizione della Festa dei Ciliegi in Fiore.</big></p>
+
+<p><big>All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato all’intitolazione della rotonda della Pieve e all’installazione in loco del monumento ai donatori.</big></p><br>
 
 <p><big><strong>Ottobre 2024</strong>: Passeggiata storico-artistica nel borgo di Vignola.</p></big>
 
@@ -76,7 +77,7 @@ Intervento dedicato a concittadini illustri del passato e ad alcuni importanti l
 
 <p><big><strong>Settembre 2024</strong>: Passeggiata storico-artistica dalla Casa Residenza per Anziani (CRA) di Vignola al Santuario della Beata Vergine della Pieve, con visita all’interno di quest’antico edificio sacro vignolese.</p></big>
 
-<p><big>In collaborazione con la CRA di Vignola e la <i>La Banda della Trottola APS</i>, e nell’ambito delle iniziative messe in calendario dal Distretto di Vignola per la <i>Settimana dell’Alzheimer 2024</i>.</p></big><br>
+<p><big>In collaborazione con la CRA di Vignola e <i>La Banda della Trottola APS</i>, e nell’ambito delle iniziative messe in calendario dal Distretto di Vignola per la <i>Settimana dell’Alzheimer 2024</i>.</p></big><br>
 
 <p><big><strong>Marzo e aprile 2024</strong>: Collaborazione alla rivista mensile «Il Senso della Repubblica nel XXI secolo. Quaderni di Storia e Filosofia».<br><br>
 
@@ -114,11 +115,11 @@ In collaborazione con gli <i>Amici dell’Arte Vignola APS</i> e il Comune di Vi
 
 In collaborazione con gli <i>Amici dell’Arte Vignola APS</i>.</p></big><br><br><br>	
 
-<center><img src="img/FOTO VARIE/cragiugno.jpg" width="730" height="550"></center>
-<p><big><big><center>In visita presso la CRA di Vignola.</center></big></big></p><br><br>
+
 
 <p><strong><big><big>FOTOGRAFIE</big></big></strong></p><br>
-
+<center><img src="img/FOTO VARIE/cragiugno.jpg" width="730" height="550"></center>
+<p><big><big><center>Incontro presso la CRA di Vignola.</center></big></big></p><br><br>
 <p><big>Alcuni momenti delle iniziative pubbliche realizzate da <i>Celebri Vignolesi</i>.</big></p><br><br><br>
 <center><img src="img/FOTO VARIE/cimitero.jpg" width="750" height="530"></center>
 <p><big><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Amleto Degli Esposti raccontata da Piero Venturelli.</center></big></big></p><br><br>
@@ -134,6 +135,7 @@ In collaborazione con gli <i>Amici dell’Arte Vignola APS</i>.</p></big><br><br
 <p><big><big><center>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</center></big></big></p><br><br><br>
 <center><img src="img/FOTO VARIE/museocivico.jpg" width="800" height="400"></center>
 <p><big><big><center>Passeggiata storico-culturale lungo le vie della città.</center></big></big></p><br><br>
+
 
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
